tests/parser/labext/syntax_error/lab.ext
A=enp0s25
B=enp0s25.12
